Closed Bug 579529 Opened 14 years ago Closed 14 years ago

fix validation Uniform and VertexAttrib functions taking arrays

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b4
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: bjacob, Assigned: bjacob)

Details

Attachments

(1 file)

E.g. this page,

    http://www.khronos.org/opengles/sdk/2.0/docs/man/glUniform.xml

mentions several things we're not currently checking. Most importantly, we're not actually checking that the passed array is big enough, we only have a strange 'modulo' check that I can't match with anything in the GLES docs. As a result, tests are failing, e.g. gl-uniformmatrix4fv.html reports:

    Checking gl.uniformMatrix.
    FAIL should fail with insufficient array size for uniformMatrix2fv
Actually, the only problem seems to be that we generate INVALID_OPERATION and the test expects INVALID_VALUE and has a very confusing error message.

This patch changes that, and also improves a bit our own error message.
Attachment #457995 - Flags: review?(vladimir)
cool, confirming that with this patch, gl-uniformmatrix4fv.html is all green.
Attachment #457995 - Flags: approval2.0?
http://hg.mozilla.org/mozilla-central/rev/f0a62833d988

But please approve!
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Attachment #457995 - Flags: approval2.0?
blocking2.0: --- → betaN+
Target Milestone: --- → mozilla2.0b4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: