Bug 579529; fix validation Uniform and VertexAttrib functions taking arrays; r=vladimir